# glabs

./: CMakeLists.txt
include/glabs/: attrib.hpp  color.hpp  ebo.hpp  fbo.hpp  gl.hpp  imagedata.hpp  loader.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
